--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,13 +15,17 @@
         android:theme="@style/Theme.FireBase"
         tools:targetApi="31">
         <activity
-            android:name=".UpdateUserActivity"
+            android:name=".PhoneActivity"
             android:exported="false" />
         <activity
-            android:name=".AddUserActivity"
+            android:name=".ForgetActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".SignupActivity"
+            android:exported="false"
+            android:parentActivityName=".LoginActivity" />
+        <activity
+            android:name=".LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -29,6 +33,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".UpdateUserActivity"
+            android:exported="false" />
+        <activity
+            android:name=".AddUserActivity"
+            android:exported="false" />
+        <activity
+            android:name=".MainActivity"
+            android:exported="true" />
     </application>
 
 </manifest>
